# Invoice_frappe

./: README.md  pyproject.toml
invoice/: hooks.py
invoice/invoice/doctype/grocery_order/: grocery_order.js  grocery_order.json  grocery_order.py  test_grocery_order.py
invoice/invoice/doctype/product/: product.json  product.py
